--- a/homepage.html
+++ b/homepage.html
@@ -165,10 +165,10 @@
                 <div class="col social">
                   <h1>Social</h1>
                   <ul>
-                    <li><img src="/images/icone-face.png" width="32" style="width: 32px;"></li>
-                    <li><img src="/images/icone-insta.png" width="32" style="width: 32px;"></li>
-                    <li><img src="/images/icone-twitt.png" width="32" style="width: 32px;"></li>
-                    <li><img src="/images/icone-yt.png" width="32" style="width: 32px;"></li>
+                    <li><img src="images/icone-face.png" width="32" style="width: 32px;"></li>
+                    <li><img src="images/icone-insta.png" width="32" style="width: 32px;"></li>
+                    <li><img src="images/icone-twitt.png" width="32" style="width: 32px;"></li>
+                    <li><img src="images/icone-yt.png" width="32" style="width: 32px;"></li>
                   </ul>
                 </div>
               <div class="clearfix"></div>
